@@ -1,5 +1,6 @@
 CHECK:
  - java.lang.PrintStream vs. java.io.PrintStream (why lang package?)
+ - java.lang.Properties agains JavaDoc with none String get/set Property-Key
  
 To Implement:
  - java.nio.channel (java.io.FileOutputStream.getChannel())
